syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "WebShopDemo.gRPC";

package product;

// The product service definition.
service Product{
	// Gets products
	rpc GetAll (google.protobuf.Empty) returns (ProductList);
}

message ProductList {
	repeated ProductItem items = 1;
}

message ProductItem {
	string id = 1;
	string name = 2;
	double price = 3;
	int32 quiantity = 4;
}